[project]
name = "ripple"
version = "0.1.0"
description = "Object sync network library for games"
authors = [{ name = "Maarten De Paepe" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"

[tool.ruff]
line-length = 80

[tool.black]
line-length = 80

[tool.pyrefly]
project-includes = ["**/*"]
project-excludes = [
    "**/node_modules",
    "**/__pycache__",
    '**/*venv/**\*',
]
